[gd_scene load_steps=9 format=2]

[ext_resource path="res://mods/cat_modutils/updates/ModUtilsVersionStrings.gd" type="Script" id=1]
[ext_resource path="res://ui/fonts/regular/regular_30.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/icons/map_markers/passive_quest_icon.png" type="Texture" id=3]
[ext_resource path="res://ui/icons/map_markers/quest_icon.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.168627, 0.113725, 0.223529, 0.6 )
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.168627, 0.113725, 0.223529, 0.6 )
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id=4]

[node name="ModUtilsVersionStrings" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 10
custom_constants/separation = 0
alignment = 2
script = ExtResource( 1 )

[node name="VersionLabel" type="Label" parent="."]
margin_top = 806.0
margin_right = 1920.0
margin_bottom = 836.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 2 )
text = "0.0.0-0"
valign = 2

[node name="ReadyLabel" type="Label" parent="."]
margin_top = 836.0
margin_right = 1920.0
margin_bottom = 866.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 2 )
text = "+ Ready"
valign = 2

[node name="WorkingLabel" type="Label" parent="."]
margin_top = 866.0
margin_right = 1920.0
margin_bottom = 896.0
custom_colors/font_color = Color( 0.92, 0.793347, 0.3772, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 2 )
text = "+ Working"
valign = 2

[node name="UpdateButton" type="Button" parent="."]
margin_top = 896.0
margin_right = 1920.0
margin_bottom = 988.0
rect_min_size = Vector2( 0, 46 )
custom_colors/font_color_disabled = Color( 0.247059, 0.733333, 0.623529, 1 )
custom_colors/font_color_focus = Color( 0.247059, 0.733333, 0.623529, 1 )
custom_colors/font_color = Color( 0.247059, 0.733333, 0.623529, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 0.6 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "Update"
icon = ExtResource( 4 )
align = 0

[node name="ErrorButton" type="Button" parent="."]
margin_top = 988.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 0, 46 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 0.6 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "Error"
icon = ExtResource( 3 )
align = 0
